# COMP5411-VulkanSceneRenderer

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFrameBuffer.hpp  VulkanHeightmap.hpp  VulkanInitializers.hpp  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTools.cpp  VulkanTools.h  VulkanUIOverlay.cpp  VulkanUIOverlay.h  VulkanglTFModel.cpp  VulkanglTFModel.h  benchmark.hpp  keycodes.hpp  vulkanexamplebase.cpp  vulkanexamplebase.h
cmake/: compile_flags.cmake
data/shaders/: compileshaders.py
data/shaders/gltfscenerendering/: scene.frag  scene.frag.spv  scene.vert  scene.vert.spv
data/shaders/light_cube/: light_cube.frag  light_cube.frag.spv  light_cube.vert  light_cube.vert.spv
data/shaders/normals/: normals.frag  normals.geom  normals.geom.spv  normals.vert
data/shaders/pntriangles/: passthrough.tesc  passthrough.tesc.spv  passthrough.tese  passthrough.tese.spv  pntriangles.tesc  pntriangles.tesc.spv  pntriangles.tese  pntriangles.tese.spv
src/: CMakeLists.txt  application_bound.cpp  application_bound.h  gltfscenerendering.cpp  gltfscenerendering.h  light_cube.cpp  light_cube.h  light_ubo.cpp  light_ubo.h  main.cpp  main.h  multisample_target.cpp  multisample_target.h  normals_pipeline.cpp  normals_pipeline.h  query_pool.cpp  query_pool.h  screenshot.cpp  screenshot.h  tessellation.cpp  tessellation.h  ubo.h  vulkan_gltf_scene.cpp  vulkan_gltf_scene.h
